  of the Country class implementation.
* Country instances can now be used with Marshal.dump and Marshal.load. #4240.
* Country has a new zone_info method that returns CountryTimezone objects
  containing additional information about each Timezone (latitude, longitude
  and description).
* Timezones within a Country are now returned in an order that makes 
  geographic sense.
* zdumptest utility now compares the TZInfo zone identifier with the zdump
  zone identifier.
* zdumptestall utility now exits if not supplied with enough parameters.
* eql? method defined on Country and Timezone that is equivalent to ==.
* == method of Timezone no longer raises an exception when passed an object
  with no identifier method.
* hash method defined on Country that returns the hash of the code.
* hash method defined on Timezone that returns the hash of the identifier.
* Miscellaneous API documentation corrections and improvements.
* Timezone definition and indexes are now excluded from rdoc (the contents were
  ignored with #:nodoc: anyway).
* Installation of gem now causes rdoc API documentation to be generated. #4905.
* When optimizing transitions to generate zone definitions, check the
  UTC and standard offsets rather than just the total offset to UTC. Fixes an
  incorrect abbreviation issue with Europe/London, Europe/Dublin and 
  Pacific/Auckland.


== Version 0.2.1 (tzdata v2006d) - 17-Apr-2006

* Fix a performance issue caused in 0.2.0 with Timezone.local_to_utc. 
  Conversions performed on TimeOrDateTime instances passed to <=> are now
  cached as originally intended. Thanks to Michael Smedberg for spotting this.
* Fix a performance issue with the local_to_utc period search algorithm 
  originally implemented in 0.1.0. The condition that was supposed to cause
  the search to terminate when enough periods had been found was only being
  evaluated in a small subset of cases. Thanks to Michael Smedberg and 
  Jamis Buck for reporting this.